fix: horizontal scroll to edge of screen
Adjust horizontal scrolling mobile layout so the cards go to the right
edge of the screen instead of cutting off. Also fixes extra space at end
of the grid-container, and simplifies the styles using a `not` media
query to avoid having to unset/reset the values.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -578,23 +578,23 @@ main > .section.small-screen-cta-container > .grid-container {
 .grid-container--with-scroll {
   --card-drop-shadow-size-x: var(--spectrum-drop-shadow-blur-100);
   --card-drop-shadow-size-y: calc(var(--spectrum-drop-shadow-y-100) + var(--spectrum-drop-shadow-blur-100));
-
-  overflow-x: scroll;
+ 
   padding-block: var(--card-drop-shadow-size-y);
   padding-inline-start: var(--card-drop-shadow-size-x);
   margin-inline-start: calc(var(--card-drop-shadow-size-x) * -1);
-
-  @media (min-width: 36rem) {
-    overflow-x: unset;
+ 
+  @media not all and (min-width: 36rem) {
+    overflow-x: scroll;
+    margin-inline-end: calc(var(--page-gutters) * -1);
+    padding-inline-end: var(--page-gutters);
+    max-width: calc(100% + var(--page-gutters));
   }
 
   @supports (display: grid) {
-    grid-auto-flow: column;
-    grid-auto-columns: var(--horizontal-scroll-block-width);
-
-    @media (min-width: 36rem) {
-      grid-auto-flow: unset;
-      grid-auto-columns: unset;
+    @media not all and (min-width: 36rem) {
+      grid-auto-flow: column;
+      grid-auto-columns: var(--horizontal-scroll-block-width);
+      grid-template-columns: none;
     }
   }
 }
